fixed: prevented overlapping of ships for both fixed: no display for active ships for both fixed: hover for ships when placing for player checked: new game button event listener and it is working fine

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,105 +1,116 @@
-@font-face{
-    font-family: 'myFont';
-    src: url('/assets/images_and_fonts/BigShouldersStencilText-ExtraBold.ttf') format('truetype'),
-        url('/assets/images_and_fonts/BigShouldersStencilText-SemiBold.ttf') format('truetype');
-    font-style: normal;
+@font-face {
+  font-family: "myFont";
+  src:
+    url("/assets/images_and_fonts/BigShouldersStencilText-ExtraBold.ttf")
+      format("truetype"),
+    url("/assets/images_and_fonts/BigShouldersStencilText-SemiBold.ttf")
+      format("truetype");
+  font-style: normal;
 }
 
-html, body {
-    margin: 0px;
-    padding: 0px;
-    background-color: #EBEBEB;
+html,
+body {
+  margin: 0px;
+  padding: 0px;
+  background-color: #ebebeb;
 }
 
 #contentSection {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
 }
 
 #gameBoardContainer {
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
 }
 
 #gameSection {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
 }
 
 #playerSection {
-    display: grid;
-    grid-template-rows: repeat(10, 2fr);
-    grid-template-columns: repeat(10, 2fr);
-    background-color: black;
-    gap: 3px;
-    padding: 3px;
+  display: grid;
+  grid-template-rows: repeat(10, 2fr);
+  grid-template-columns: repeat(10, 2fr);
+  background-color: black;
+  gap: 3px;
+  padding: 3px;
 }
 
 #computerSection {
-    display: grid;
-    gap: 3px;
-    padding: 3px;
-    background-color: black;
-    grid-template-rows: repeat(10, 2fr);
-    grid-template-columns: repeat(10, 2fr);
+  display: grid;
+  gap: 3px;
+  padding: 3px;
+  background-color: black;
+  grid-template-rows: repeat(10, 2fr);
+  grid-template-columns: repeat(10, 2fr);
 }
 
 .cell {
-    background-color: white;
-    width: 40px;
-    height: 40px;
+  background-color: white;
+  width: 40px;
+  height: 40px;
 }
 
 .shipHit {
-    background-color: #F94E65 !important;
+  background-color: #f94e65 !important;
 }
 
 .missHit {
-    background-color: #6CAE32;
+  background-color: #6cae32;
 }
 
 .shipColor {
-    background-color: gray;
+  background-color: #36454f;
 }
 
 #headerSection {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 #header {
-    font-size: 5rem;
-    font-family: myFont;
+  font-size: 5rem;
+  font-family: myFont;
 }
 
-#playerContainer, #computerContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    justify-content: center;
-    align-items: center;
+#playerContainer,
+#computerContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
-#playerHeading, #computerHeading {
-    font-size: 1.5rem;
+#playerHeading,
+#computerHeading {
+  font-size: 1.5rem;
 }
 
 #instructionHeading {
-    font-size: 2rem;
-    padding-bottom: 5px;
-    border-bottom: 1px dashed black;
+  font-size: 2rem;
+  padding-bottom: 5px;
+  border-bottom: 1px dashed black;
 }
 
 #newGameButton {
-    font-size: 1.5rem;
-    font-family: myFont;
-    width: 180px;
-    height: 50px;
-    border: 2px solid black;
+  font-size: 1.5rem;
+  font-family: myFont;
+  width: 180px;
+  height: 50px;
+  border: 2px solid black;
+}
+
+.battleshipHover {
+  background-color: #36454f;
+  opacity: 80%;
 }
